spade-tests/src/snapshots/spade_tests__parser__invalid_top_level_tokens_cause_errors.snap
---
source: spade-tests/src/parser.rs
---
+ x() -> bool {
    false
}

entity x() -> bool {
    false
}


error: expected item, got `+`
  ┌─ testinput:1:1
  │
1 │ + x() -> bool {
  │ ^ expected item
